--- a/src/pages/home/index.html
+++ b/src/pages/home/index.html
@@ -1,3 +1,20 @@
-<div class="home"> 
+<div class="home">
+    <div class="row">
+        <div class="title-section">
+            <h1>Github Searcher</h1>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-6">
+          <div class="input-group">
+            <span class="input-group-btn">
+              <button class="btn btn-default" type="button">Go!</button>
+            </span>
+            <input type="text" class="form-control" placeholder="Search for...">
+          </div><!-- /input-group -->
+        </div><!-- /.col-lg-6 -->
+        <div class="col-lg-6">
+      </div><!-- /.row -->
+  <!-- <a ui-sref="home.view1">view1</a> -->
   <div ui-view></div>
 </div>
