--- a/src/pages/home/index.html
+++ b/src/pages/home/index.html
@@ -1,20 +1,21 @@
 <div class="home">
-    <div class="row">
+    <section class="row col-lg-6 section">
         <div class="title-section">
             <h1>Github Searcher</h1>
         </div>
-    </div>
-    <div class="row">
+    </section>
+    <section class="row section">
         <div class="col-lg-6">
           <div class="input-group">
+            <input type="text" class="form-control" placeholder="Search for..." ng-model="$ctrl.searchValue">
             <span class="input-group-btn">
-              <button class="btn btn-default" type="button">Go!</button>
-            </span>
-            <input type="text" class="form-control" placeholder="Search for...">
+                <button class="btn btn-default btn-primary" type="button" ng-click="$ctrl.handleSubmit()">Search</button>
+              </span>
           </div><!-- /input-group -->
         </div><!-- /.col-lg-6 -->
         <div class="col-lg-6">
       </div><!-- /.row -->
-  <!-- <a ui-sref="home.view1">view1</a> -->
-  <div ui-view></div>
+    </section>
+
+  <view1 ng-if="$ctrl.listRepo.length > 0"></view1>
 </div>
