--- a/src/pages/home/view1/index.html
+++ b/src/pages/home/view1/index.html
@@ -1,1 +1,11 @@
-<div>view1</div>
+<section class="row github-list section">
+    <div class="col-md-4 " ng-repeat="item in $ctrl.listRepo">
+        <div class="card card-container" style="width: 18rem;">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+        </div>
+    </div>
+</section>
